--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "^15.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
+    "framer-motion": "^11.16.0",
     "next": "^15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
