--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
